EGRET 3.0.8
===========
* Added GenConc to tableResult function
* Added monthly trend to runPairs
* Added plotMonthTrend function
* Improved support for custom axes

EGRET 3.0.7
===========
* Fixed a flux unit label issue for plotTimeSlice
* Added nDays in calculateMonthlyResults

EGRET 3.0.6
===========
* Fixed broken example in saveResults. Function will be deprecated in future versions.

EGRET 3.0.5
===========
* WRTDSKalman function added to improve flux estimations.
* Documentation updates.
* Added a "jitter" option to help with models that do not converge.
* Updated setupYear function to handle edge years better.

EGRET 3.0.0
===========
* Added enhancements for generalized flow normalization
* Functions include runPairs, runSeries, and runGroups

EGRET 2.6.1
===========
* Added foreach dependency which allows parallelizing WRTDS.
* Added the function flexFN for flexible flow normalization.

EGRET 2.6.0
===========
* start/end year argument names unified to yearStart and yearEnd (previously included startYear and endYear)

EGRET 2.5.3
===========
* Argument for randomized censored values names randomCensored

EGRET 2.5.0
===========
* Added an argument to the concentration and residual plotting functions to randomize the censored values for the plots.
* Minor bug fixes

EGRET 2.3.1
===========
* Removed unnecessary disclaimer.

EGRET 2.2.0
===========
* Minor bug fixes
* Added kg/year option for flux


EGRET 2.1.4
===========
* Updated CITATION file


EGRET 2.1.1
===========
* Exposed sysdata.rda constants
* Fixed some inconsistancies in readUserInfo function
* Added prettyDate argument to plotFluxTimeDaily, plotConcTimeDaily, and plotQTimeDaily. This overrides the 'pretty' axis so that the plot starts and ends exactly at the startYear/endYear arguments
* Added testthat unit tests
* Added kg/year flux constant

EGRET 2.1.0
===========
* Updated processQWData to be more inclusive of Water Quality Portal data