@@ -1,15 +1,23 @@
 #' Import user daily data for EGRET analysis
 #'
-#' Imports data from a user-supplied file, and converts it to a Daily data frame, appropriate for WRTDS calculations.
+#' Imports data from a user-supplied file, and converts it to a Daily data frame,
+#'  appropriate for WRTDS calculations. The file can use most any separators
+#'  as a delimiter. The default is comma separated.
+#'  
+#'  The first column is expected to be dates, the second column is expected
+#'  to be discharge values. If the date format is not automatically
+#'  detected, the format that is expected is "%m/%d/%Y". 
 #'
 #' @param filePath character specifying the path to the file
 #' @param fileName character name of file to open
 #' @param hasHeader logical true if the first row of data is the column headers
-#' @param separator character character that separates data cells
-#' @param qUnit number 1 is cubic feet per second, 2 is cubic meters per second, 3 is 10^3 cubic feet per second, and 4 is 10^3 cubic meters per second
+#' @param separator character character that separates data cells. The default
+#' is "," for a csv file. Tab delimited would be "\\t".
+#' @param qUnit number 1 is cubic feet per second, 
+#' 2 is cubic meters per second, 
+#' 3 is 10^3 cubic feet per second,
+#'  and 4 is 10^3 cubic meters per second. The default is 1.
 #' @param verbose logical specifying whether or not to display progress message
-#' @param interactive logical deprecated. Use 'verbose' instead
-#' @keywords data import file
 #' @keywords data import USGS WRTDS
 #' @export
 #' @return A data frame 'Daily' with the following columns:
@@ -32,15 +40,18 @@
 #' filePath <- system.file("extdata", package="EGRET")
 #' fileName <- "ChoptankRiverFlow.txt"
 #' Daily <- readUserDaily(filePath,fileName,separator="\t")
-readUserDaily <- function (filePath,fileName,hasHeader=TRUE,separator=",",qUnit=1,verbose = TRUE,interactive=NULL){
+readUserDaily <- function (filePath,
+                           fileName,
+                           hasHeader = TRUE,
+                           separator = ",",
+                           qUnit = 1,
+                           verbose = TRUE){
   
-  if(!is.null(interactive)) {
-    warning("The argument 'interactive' is deprecated. Please use 'verbose' instead")
-    verbose <- interactive
-  }
-  
-  data <- readDataFromFile(filePath,fileName,hasHeader=hasHeader,separator=separator)
-  convertQ<-c(35.314667,1,0.035314667,0.001)
+  data <- readDataFromFile(filePath,
+                           fileName,
+                           hasHeader = hasHeader,
+                           separator = separator)
+  convertQ <- c(35.314667, 1, 0.035314667, 0.001)
   qConvert<-convertQ[qUnit]
 
   if(qUnit==1) message("The input discharge are assumed to be in cubic feet per second, if they are in cubic meters per second, then the call to readUserDaily should specify qUnit=2")
