@@ -218,7 +218,7 @@ sessioninfo::session_info()
 ## Reporting bugs
 
 Please consider reporting bugs and asking questions on the Issues page:
-[https://github.com/USGS-R/EGRET/issues](https://github.com/USGS-R/EGRET/issues)
+[https://github.com/DOI-USGS/EGRET/issues](https://github.com/DOI-USGS/EGRET/issues)
 
 
 ## Subscribe
