@@ -323,7 +323,7 @@ siteID <- "01491000" #Choptank River at Greensboro, MD
 startDate <- "" # Get earliest date
 endDate <- "" # Get latest date
 Daily <- readNWISDaily(siteID, "00060", startDate, endDate)
-#> There are 27371 data points, and 27371 days.
+#> There are 27396 data points, and 27396 days.
 # Gather site and parameter information:
 # Here user must input some values for
 # the default (interactive=TRUE)
@@ -415,8 +415,8 @@ sessioninfo::session_info()
 #>  collate  English_United States.utf8
 #>  ctype    English_United States.utf8
 #>  tz       America/Chicago
-#>  date     2022-12-09
-#>  pandoc   2.19.2 @ C:/Program Files/RStudio/bin/quarto/bin/tools/ (via rmarkdown)
+#>  date     2023-01-03
+#>  pandoc   2.19.2 @ C:/Program Files/RStudio/resources/app/bin/quarto/bin/tools/ (via rmarkdown)
 #> 
 #> ─ Packages ───────────────────────────────────────────────────────────────────
 #>  package       * version date (UTC) lib source
@@ -425,19 +425,19 @@ sessioninfo::session_info()
 #>  bit64           4.0.5   2020-08-30 [1] CRAN (R 4.2.2)
 #>  class           7.3-20  2022-01-16 [2] CRAN (R 4.2.2)
 #>  classInt        0.4-8   2022-09-29 [1] CRAN (R 4.2.1)
-#>  cli             3.4.1   2022-09-23 [1] CRAN (R 4.2.1)
+#>  cli             3.5.0   2022-12-20 [1] CRAN (R 4.2.2)
 #>  colorspace      2.0-3   2022-02-21 [1] CRAN (R 4.2.1)
 #>  crayon          1.5.2   2022-09-29 [1] CRAN (R 4.2.1)
 #>  curl            4.3.3   2022-10-06 [1] CRAN (R 4.2.1)
-#>  dataRetrieval   2.7.12  2022-12-08 [1] local
+#>  dataRetrieval   2.7.12  2022-12-30 [1] local
 #>  DBI             1.1.3   2022-06-18 [1] CRAN (R 4.2.1)
-#>  digest          0.6.30  2022-10-18 [1] CRAN (R 4.2.2)
+#>  digest          0.6.31  2022-12-11 [1] CRAN (R 4.2.2)
 #>  dotCall64       1.0-2   2022-10-03 [1] CRAN (R 4.2.1)
 #>  dplyr           1.0.10  2022-09-01 [1] CRAN (R 4.2.1)
 #>  e1071           1.7-12  2022-10-24 [1] CRAN (R 4.2.2)
-#>  EGRET         * 3.0.7.3 2022-09-23 [1] local
+#>  EGRET         * 3.0.7.3 2022-12-12 [1] local
 #>  ellipsis        0.3.2   2021-04-29 [1] CRAN (R 4.2.1)
-#>  evaluate        0.18    2022-11-07 [1] CRAN (R 4.2.2)
+#>  evaluate        0.19    2022-12-13 [1] CRAN (R 4.2.2)
 #>  fansi           1.0.3   2022-03-24 [1] CRAN (R 4.2.1)
 #>  fastmap         1.1.0   2021-01-25 [1] CRAN (R 4.2.1)
 #>  fields          14.1    2022-08-12 [1] CRAN (R 4.2.1)
@@ -446,7 +446,7 @@ sessioninfo::session_info()
 #>  glue            1.6.2   2022-02-24 [1] CRAN (R 4.1.3)
 #>  gridExtra       2.3     2017-09-09 [1] CRAN (R 4.2.1)
 #>  gtable          0.3.1   2022-09-01 [1] CRAN (R 4.2.1)
-#>  highr           0.9     2021-04-16 [1] CRAN (R 4.2.1)
+#>  highr           0.10    2022-12-22 [1] CRAN (R 4.2.2)
 #>  hms             1.1.2   2022-08-19 [1] CRAN (R 4.2.1)
 #>  htmltools       0.5.4   2022-12-07 [1] CRAN (R 4.2.2)
 #>  httr            1.4.4   2022-08-17 [1] CRAN (R 4.2.2)
@@ -465,7 +465,7 @@ sessioninfo::session_info()
 #>  Rcpp            1.0.9   2022-07-08 [1] CRAN (R 4.2.1)
 #>  readr           2.1.3   2022-10-01 [1] CRAN (R 4.2.1)
 #>  rlang           1.0.6   2022-09-24 [1] CRAN (R 4.2.1)
-#>  rmarkdown       2.18    2022-11-09 [1] CRAN (R 4.2.2)
+#>  rmarkdown       2.19    2022-12-15 [1] CRAN (R 4.2.2)
 #>  rstudioapi      0.14    2022-08-22 [1] CRAN (R 4.2.1)
 #>  scales          1.2.1   2022-08-20 [1] CRAN (R 4.2.1)
 #>  sessioninfo     1.2.2   2021-12-06 [1] CRAN (R 4.2.1)
@@ -477,13 +477,13 @@ sessioninfo::session_info()
 #>  tibble          3.1.8   2022-07-22 [1] CRAN (R 4.2.1)
 #>  tidyselect      1.2.0   2022-10-10 [1] CRAN (R 4.2.1)
 #>  tzdb            0.3.0   2022-03-28 [1] CRAN (R 4.2.1)
-#>  units           0.8-0   2022-02-05 [1] CRAN (R 4.2.1)
+#>  units           0.8-1   2022-12-10 [1] CRAN (R 4.2.2)
 #>  utf8            1.2.2   2021-07-24 [1] CRAN (R 4.2.1)
 #>  vctrs           0.5.1   2022-11-16 [1] CRAN (R 4.2.2)
 #>  viridis         0.6.2   2021-10-13 [1] CRAN (R 4.2.1)
 #>  viridisLite     0.4.1   2022-08-22 [1] CRAN (R 4.2.1)
 #>  vroom           1.6.0   2022-09-30 [1] CRAN (R 4.2.1)
-#>  xfun            0.35    2022-11-16 [1] CRAN (R 4.2.2)
+#>  xfun            0.36    2022-12-21 [1] CRAN (R 4.2.2)
 #>  yaml            2.3.6   2022-10-18 [1] CRAN (R 4.2.1)
 #> 
 #>  [1] C:/Users/ldecicco/Documents/R/win-library/4.2
@@ -495,7 +495,7 @@ sessioninfo::session_info()
 ## Reporting bugs
 
 Please consider reporting bugs and asking questions on the Issues page:
-<https://github.com/USGS-R/EGRET/issues>
+<https://github.com/DOI-USGS/EGRET/issues>
 
 ## Subscribe
 
@@ -562,13 +562,12 @@ See this list for WRTDS applications in print:
 
 # Disclaimer
 
-This software has been approved for release by the U.S. Geological
-Survey (USGS). Although the software has been subjected to rigorous
-review, the USGS reserves the right to update the software as needed
-pursuant to further analysis and review. No warranty, expressed or
-implied, is made by the USGS or the U.S. Government as to the
-functionality of the software and related material nor shall the fact of
-release constitute any such warranty. Furthermore, the software is
-released on condition that neither the USGS nor the U.S. Government
-shall be held liable for any damages resulting from its authorized or
-unauthorized use.
+This software is preliminary or provisional and is subject to revision.
+It is being provided to meet the need for timely best science. The
+software has not received final approval by the U.S. Geological Survey
+(USGS). No warranty, expressed or implied, is made by the USGS or the
+U.S. Government as to the functionality of the software and related
+material nor shall the fact of release constitute any such warranty. The
+software is provided on the condition that neither the USGS nor the U.S.
+Government shall be held liable for any damages resulting from the
+authorized or unauthorized use of the software.
