@@ -5,7 +5,7 @@
 \title{Import user daily data for EGRET analysis}
 \usage{
 readUserDaily(filePath, fileName, hasHeader = TRUE, separator = ",",
-  qUnit = 1, verbose = TRUE, interactive = NULL)
+  qUnit = 1, verbose = TRUE)
 }
 \arguments{
 \item{filePath}{character specifying the path to the file}
@@ -14,13 +14,15 @@ readUserDaily(filePath, fileName, hasHeader = TRUE, separator = ",",
 
 \item{hasHeader}{logical true if the first row of data is the column headers}
 
-\item{separator}{character character that separates data cells}
+\item{separator}{character character that separates data cells. The default
+is "," for a csv file. Tab delimited would be "\\t".}
 
-\item{qUnit}{number 1 is cubic feet per second, 2 is cubic meters per second, 3 is 10^3 cubic feet per second, and 4 is 10^3 cubic meters per second}
+\item{qUnit}{number 1 is cubic feet per second, 
+2 is cubic meters per second, 
+3 is 10^3 cubic feet per second,
+ and 4 is 10^3 cubic meters per second. The default is 1.}
 
 \item{verbose}{logical specifying whether or not to display progress message}
-
-\item{interactive}{logical deprecated. Use 'verbose' instead}
 }
 \value{
 A data frame 'Daily' with the following columns:
@@ -41,7 +43,13 @@ Q30 \tab numeric \tab 30 day running average of Q \cr
 }
 }
 \description{
-Imports data from a user-supplied file, and converts it to a Daily data frame, appropriate for WRTDS calculations.
+Imports data from a user-supplied file, and converts it to a Daily data frame,
+ appropriate for WRTDS calculations. The file can use most any separators
+ as a delimiter. The default is comma separated.
+ 
+ The first column is expected to be dates, the second column is expected
+ to be discharge values. If the date format is not automatically
+ detected, the format that is expected is "%m/%d/%Y".
 }
 \examples{
 filePath <- system.file("extdata", package="EGRET")
@@ -51,5 +59,4 @@ Daily <- readUserDaily(filePath,fileName,separator="\t")
 \keyword{USGS}
 \keyword{WRTDS}
 \keyword{data}
-\keyword{file}
 \keyword{import}
